# Training-program-app

./: .env.example  .gitignore  AGENTS.md  Caddyfile  README.md  docker-compose.quick-tunnel.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260703_0001_initial_schema.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: session.py
apps/api/app/dependencies/: auth.py
apps/api/app/models/: __init__.py  exercise.py  mixins.py  set.py  template.py  user.py  workout.py
apps/api/app/routes/: admin.py  ai.py  auth.py  exercises.py  workouts.py
apps/api/app/scripts/: __init__.py  import_exercises.py  seed_curated_exercises.py  seed_workout_templates.py
apps/api/app/services/: exercise_import.py  telegram_auth.py  workout_sessions.py  workout_templates.py  workout_validator.py
apps/api/tests/: test_ai_routes.py  test_auth_routes.py  test_config.py  test_exercise_import.py  test_exercise_routes.py  test_models_metadata.py  test_telegram_auth.py  test_workout_sessions.py  test_workout_templates.py
apps/bot/: .dockerignore  Dockerfile  pyproject.toml
apps/bot/app/: __init__.py  api_client.py  config.py  handlers.py  main.py  messages.py
apps/bot/tests/: test_handlers.py
apps/mini-app/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/mini-app/src/: App.test.tsx  App.tsx  (+3 more)
data/: curated_exercises.seed.json
docs/: api.md  backend-foundation.md  data-model.md  deployment.md  openclaw.md  quick-tunnel-testing.md
(+17 files in other folders)
