[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "training-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.5",
  "fastapi>=0.139.0",
  "psycopg>=3.3.4",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "sqlalchemy>=2.0.51",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=2.1.0",
  "pytest>=9.1.1",
  "ruff>=0.15.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
warn_unused_ignores = true
